style.css
html,
body {
    margin: 0;
    padding: 0;
}

.overlay {
    position: fixed;
    /* Set the overlay position to fixed */
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(4px);
    /* Adjust the blur amount as desired */
    z-index: -1;
    /* Ensure the overlay is behind other content */
}

body {
    background-image: url('background.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 100vh;
    background-position: center;
    background-color: #f1f1f1;
    font-family: 'Inter', sans-serif;
    margin: auto;
    display: flex;
}

#main {
    background-color: rgba(242, 245, 255, 0.9);
    box-shadow: 2px 2px 10px rgba(92, 52, 92, 0.8);
    min-width: 70vw;
    max-width: 80vw;
    margin: 2rem auto;
    padding: 2rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

@media (min-width: 767px) {
    .two-col {
        display: flex;
        width: 100%;
        flex-direction: row;
        justify-content: space-between;
    }
}

#socials {
    display: flex;
    row-gap: 0px;
    column-gap: 1rem;
    flex-wrap: wrap;
}


#me {
    max-width: 10rem;
    max-height: 10rem;
}

.column {
    flex: 1,
}

.intro-text {
    font-weight: 300;
}

h1 {
    font-size: 28px;
}

figcaption {
    font-size: small;
    font-weight: 300;
}

hr {
    width: 100%
}

h2 {
    font-size: 24px;
}

ul {
    list-style-type: square;
    padding-left: 1rem;
    margin-left: 0rem;
}

li {
    padding-bottom: 0;
    margin: 0;
}


.currently-item {
    font-weight: 300;
}

figure {
    margin: 1rem
}

.bold {
    font-weight: 400;
}

#left-col-intro {
    /* max-width: min-content; */
    overflow-wrap: break-word;
}

#bsplitlogo {
    padding-left: 1rem;
}

.two-col-no-wrap {
    display: flex;
    flex-direction: row;
    margin-top: -1rem;
    margin-bottom: -1rem;
    padding: 0;
    align-items: center;
    flex-wrap: nowrap;
}

@media (max-width: 767px) {
    h1 {
        font-size: medium;
    }

    h2 {
        font-size: small;
    }

    p {
        font-size: small;
    }

    .two-col {
        display: flex;
        flex-direction: row;
        max-width: 100vw;
    }

    #me {
        height: 100px;
        width: 100px;
        padding-left: 0;
        margin-left: 1rem;
    }
}

/**
STUFF FOR BROWSING HISTORY WIDGET
*/
#browsing-box {
    display: grid;
    grid-template-columns: 22px minmax(0, 1fr);
    grid-gap: 5px;
    grid-row-gap: 3px;
    grid-auto-rows: minmax(auto, max-content);
    align-items: center;
    text-overflow: clip;
    max-height: 300px;
    overflow-y: scroll;
    overflow-x: hidden;
    scrollbar-width: none;
}

#browsing-box::-webkit-scrollbar {
    display: none;
}

#browsing {
    display: none;
    background-color: #eee;
    padding: 1rem 1rem;
    width: 200px;
    height: min-content;
    border-radius: 0.5rem;
    box-shadow: 2px 2px 5px rgba(150, 88, 150, 0.8);
}

.browsing-header-p {
    font-size: 12px;
    font-weight: 500;
    margin: 0;
    padding: 0;
    margin-bottom: 0.5rem;
}

.time-ago-p {
    font-size: 9px;
    font-weight: 400;
}

.fav-icon {
    width: '16px';
    height: '16px';
}

#browsing h1 {
    font-size: 12pt;
    font-weight: 500;
    margin: 0;
    padding: 0;
}

.browsing-card {
    background-color: #fbfbfb;
    padding: 0.5rem;
    display: flex;
    align-items: center;
    min-width: fit-content;
    flex-direction: row;
    border-radius: 0.5rem;
}

.browsing-card-name-url {
    display: flex;
    flex-direction: column;
    margin: 0;
    margin-left: 0.2rem;

}

.browsing-card-name {
    margin: 0;
    padding: 0;
    font-size: 10px;
}

.browsing-card-url {
    margin: 0;
    padding: 0;
    font-size: 8px;
    font-style: italic;
    overflow-wrap: normal;
    /* May remove, but this allows words to break anywhere*/
    word-break: break-all;
}

